# OpenSoundRelay

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  clippy-errors.txt  settings.gradle.kts
.github/workflows/: android.yml  diagnose-rust-pr.yml  format-rust-pr.yml  release.yml  rust.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  osr_audio.cpp
android/app/src/main/java/dev/sakus/osr/: AudioProfiles.kt  AudioQuality.kt  AudioRelayService.kt  LanDiscovery.kt  LanDiscoveryManager.kt  LiveAudioBuffer.kt  LiveAudioSink.kt  MainActivity.kt  NativeAudioBridge.kt  NativeVolumeController.kt  OsrProtocol.kt  PcmAudioReceiver.kt  PcmAudioSender.kt  PcmJitterBuffer.kt  VolumeSynchronizer.kt
android/app/src/main/res/drawable/: ic_relay_notification.xml  ic_tab_audio.xml  ic_tab_connection.xml  ic_tab_status.xml
android/app/src/main/res/values/: styles.xml
crates/osr-cli/: Cargo.toml
crates/osr-cli/src/: main.rs
crates/osr-core/: Cargo.toml
crates/osr-core/src/: audio.rs  device_volume.rs  lib.rs  packet.rs  protocol.rs  volume.rs
crates/osr-desktop/: Cargo.toml
crates/osr-desktop/src/: audio_output.rs  main.rs  native_volume.rs  ui.rs  workers.rs
crates/osr-net/: Cargo.toml
crates/osr-net/src/: discovery.rs  lib.rs
docs/: android-low-latency.md  android-prototype.md  architecture.md  audio-quality.md  build.md  desktop-gui.md  lan-discovery.md  multi-device.md  networking.md  protocol.md  volume-sync.md
