[workspace]
members = [
    "crates/osr-core",
    "crates/osr-net",
    "crates/osr-cli",
    "crates/osr-desktop",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/sakusdev/OpenSoundRelay"

[workspace.dependencies]
osr-core = { path = "crates/osr-core" }
osr-net = { path = "crates/osr-net" }
