[package]
name = "osr-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform desktop GUI for OpenSoundRelay"

[[bin]]
name = "osr-desktop"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
eframe = "0.29"
egui = "0.29"
osr-core.workspace = true
osr-net.workspace = true
